# rp2040-freertos-project

./: .gitmodules  CMakeLists.txt  compile-2040.sh  compile-2350.sh  compile.sh  exe-hcsr04.sh  exe-lcd-1602.sh  exe-slave.sh  exe-slave_mem_i2c.sh  exe-test-read-crc16.sh
2cores/: CMakeLists.txt  multicore.c
2tasks/: CMakeLists.txt
Scheduling/: CMakeLists.txt
crc/: CMakeLists.txt  cvtutils.h  head-tail.h
crc16/: CMakeLists.txt
crc16/CRC16-Files/include/pico/: config_autogen.h
doc/: .~lock.pico-freeRtos.odt#  SDKSemaphore.txt  Semaphore.odt  chgs-HCSR04.txt  cmake-log.txt  debug-pico.txt  disasm-pico-lifting.txt  disasmlibklt.a.txt  disasmliblifting.txt  envents.txt  feat1.txt  feat2.ppm  feat2.txt  freeRTOS-SMP.ppt  freeRTOS-smp.txt  img0.pgm  kltforpico.odt  libcrc16.dis  linuxklt.odt  littlefs-test.txt  make-log.txt  minicom.cap  multi-pico.odt  mutex.odt  note-Scheduling.txt  notes-2cores.txt  notes-klt-test.txt  notes-kltdwt-ultibo.txt  notes-pico-lifting.txt  notes-pico-ultibo.txt  notes-test-read-crc16.txt  notes-ultibo.txt  notes_first_pwm.txt  on_core_one-smp.txt  on_core_zero-smp.txt  pico-freeRtos.odt  pico-lifting.elf.map  pico-littlefs.txt  pico-rpi3B.ppt  pico-ultibo-freeRTOS.odt  (+8 more)
doc/hcsr04/: notes.txt
doc/i2c-lcd-1602/: lcd-i2c-notes.txt  notes-display.txt  notes-logic-analyzer.txt  notes-pi4-50.txt
doc/i2c-slave/: slave-i2c-notes.txt
doc/rp2040-logic-analyzer/: notes-la-slave_mem_i2c.txt  notes-la2vcd.txt
doc/rp2040-logic-analyzer/hcsr04/: test1.4.025872.vcd  test1.9.188976.vcd  test21.043552.vcd  test30.103056.vcd  test48.222607.vcd
doc/wireshark/: wireshark.odt
freertos/: FreeRTOSConfig.h
i2c/: CMakeLists.txt
klt/: CMakeLists.txt
klt-test/: CMakeLists.txt  main.c
klt/KLT-Kernel/: klt_util.c
kltdwt-ultibo/: CMakeLists.txt  main.c
lifting/: CMakeLists.txt
lifting/LIFTING-Files/: lifting.c
pico-lifting/: CMakeLists.txt  main.c
pico-ultibo/: CMakeLists.txt  main.c
sleep/: CMakeLists.txt
test-images/: img128.pgm  l128.pgm
test-read/: CMakeLists.txt  main.c
test-read-crc16/: CMakeLists.txt  comprogs.h  comprogs.h.128  main.c  main.c.128  pshell.h
test-read-crc16/test-files/: CMakeLists.txt  main.c  make-errs.txt
testcrc16-RPi/: main.c  tst
ultibo_blink/: CMakeLists.txt  main.c  ultibo_blink.c
